Fixed dropdown in navbar hiding behind mainpage content

--- a/css.css
+++ b/css.css
@@ -75,11 +75,10 @@ li.dropdown {
 .dropdown-content {
   padding: 0px;
   position: absolute;
-  z-index: 1;
+  z-index: 100;
 }
 .dropdown:hover .dropdown-content {
     display: block;
-
 }
 
 body {
